--- a/projeto/Dashboard/dashboard/cadTerminais.html
+++ b/projeto/Dashboard/dashboard/cadTerminais.html
@@ -110,16 +110,16 @@
         </nav>
     </header>
 
-    <main style="background: linear-gradient(to right, #48bfe3, #72efdd); background-repeat: no-repeat; height: 320px; border-radius: 0 0 5px 5px;">
+    <main>
         <section class="container-flex">
             <div class="flex-station">
                 <div class="viewStation">
                     <div class="station">
-                        <p>Estação Trianom Masp</p>
+                        <p id="nomeEstacao"></p>
                     </div>
                     <div class="profile-notification perfil-desk">
                         <div class="popover">
-                            <img src="./img/icon-notification.png" alt="" class="active-pop">
+                            <img src="./img/icon-notification2.png" alt="" class="active-pop">
                             <div class="pop">
                                 <div class="popuptext">
                                     <div style="padding: 20px 30px; box-sizing: border-box;">
@@ -136,9 +136,9 @@
                         <div class="profile">
                             <img src="./img/perfil (2).png" alt="" class="img-profile">
 
-                            <h3 class="muda" id="user"></h3>
+                            <h3 class="muda" id="user" style="color: #222222;"></h3>
 
-                            <i class="fas fa-angle-down" id="info-profile"></i>
+                            <i class="fas fa-angle-down" id="info-profile" style="color: #3d3d3d;"></i>
 
                             <i class="fas fa-angle-up" id="up-profile" style="color: #3d3d3dc5; display:none;"></i>
                             <div class="profile-active">
@@ -178,71 +178,9 @@
                                 Novo Terminal
                             </button>
                             <input type="text" placeholder="Pesquisar terminal">
-                            <button class="btn-filtro">
-                                Filtrar
-                            </button>
                         </div>
                         <div class="cards">
-                            <div class="card">
-                                <div class="txtCard">
-                                    <h3>Terminal 1</h3>
-                                </div>
-                                <div class="img-card">
-                                    <div class="border-radius">
-                                        <img src="./img/icon-machina.png" alt="">
-                                    </div>
-                                </div>
-                                <div class="icon">
-                                    <img src="./img/verified.png" alt="" width="30px">
-                                    <img src="./img/plus.png" alt="" width="30px">
-                                    <img src="./img/remove.png" alt="" width="30px">
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="txtCard">
-                                    <h3>Terminal 2</h3>
-                                </div>
-                                <div class="img-card">
-                                    <div class="border-radius">
-                                        <img src="./img/icon-machina.png" alt="">
-                                    </div>
-                                </div>
-                                <div class="icon">
-                                    <img src="./img/verified.png" alt="" width="30px">
-                                    <img src="./img/plus.png" alt="" width="30px">
-                                    <img src="./img/remove.png" alt="" width="30px">
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="txtCard">
-                                    <h3>Terminal 3</h3>
-                                </div>
-                                <div class="img-card">
-                                    <div class="border-radius">
-                                        <img src="./img/icon-machina.png" alt="">
-                                    </div>
-                                </div>
-                                <div class="icon">
-                                    <img src="./img/verified.png" alt="" width="30px">
-                                    <img src="./img/plus.png" alt="" width="30px">
-                                    <img src="./img/remove.png" alt="" width="30px">
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="txtCard">
-                                    <h3>Terminal 4</h3>
-                                </div>
-                                <div class="img-card">
-                                    <div class="border-radius">
-                                        <img src="./img/icon-machina.png" alt="">
-                                    </div>
-                                </div>
-                                <div class="icon">
-                                    <img src="./img/verified.png" alt="" width="30px">
-                                    <img src="./img/plus.png" alt="" width="30px">
-                                    <img src="./img/remove.png" alt="" width="30px">
-                                </div>
-                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -257,75 +195,15 @@
         </section>
     </main>
 </body>
-<script src="../Login/script.js"></script>
-<script src="./auth.js"></script>
-<script type="text/javascript">
-    // <![CDATA[
-    var ttChatLoaderS = document.createElement('script');
-    document.tomticketChatLoaderScriptVersion = 2;
-    ttChatLoaderS.src = 'https://moveplus.tomticket.com/scripts-chat/chat.min.js'
-        + '?id=EP50568'
-        + '&account=3236352P24102020060047'
-        + '&autoOpen=0'
-        + '&hideWhenOffline=0'
-        + '&d=moveplus'
-        + '&ts=' + new Date().getTime()
-        + '&ref=' + encodeURIComponent(document.URL);
-    document.body.appendChild(ttChatLoaderS);
-    //]]>
-</script>
 
 </html>
-
+<script src="../Login/script.js"></script>
+<script src="./js/auth.js"></script>
+<script src="./js/helpdesk.js"></script>
+<script src="./js/menuMobile.js"></script>
+<script src="./js/popUp.js"></script>
+<script src="./js/exibir.js"></script>
 <script>
-
-    function menuActive() {
-        const btnMenu = document.querySelector(".icon-menuHamburguer img");
-        const ulMenu = document.getElementById('menuHidden');
-
-        function openMenu() {
-            ulMenu.classList.toggle("menu-hidden");
-        }
-
-        btnMenu.addEventListener("click", openMenu);
-    };
-
-    menuActive();
-
-    function myFunction() {
-        var popup = document.getElementById("myPopup");
-        popup.classList.toggle("show");
-    }
-
-    const popover = document.querySelector('.pop');
-    const activePop = document.querySelector('.active-pop');
-
-    function activePopover() {
-        popover.classList.toggle("popBlock");
-    }
-
-    activePop.addEventListener("click", activePopover);
-
-
-    function profile() {
-        const profileActive = document.querySelector(".profile-active");
-        const infoProfile = document.querySelector("#info-profile");
-        const profile = document.querySelector(".profile");
-        const profileTxt = document.querySelector(".muda");
-        const upProfile = document.querySelector("#up-profile");
-
-        function activeProfile() {
-            profileActive.classList.toggle("popBlock");
-            profile.classList.toggle("profile-teste");
-            profileTxt.classList.toggle("profileTxta");
-            infoProfile.classList.toggle("none");
-            upProfile.classList.toggle("popBlock");
-        }
-
-        infoProfile.addEventListener("click", activeProfile);
-        upProfile.addEventListener("click", activeProfile);
-    }
-    profile();
 
     const user = JSON.parse(sessionStorage.user);
     const identityUser = document.querySelector("#user");
