--- a/projeto/Dashboard/dashboard/perfil.html
+++ b/projeto/Dashboard/dashboard/perfil.html
@@ -43,16 +43,23 @@
                         <div class="menu-profile">
                             <ul>
                                 <li>
-                                    <a href="#">
-                                        <img src="./img/perfil (2).png" alt="" class="img-profile logout-perfil">
+                                    <a href="./perfil.html">
+                                        <i class="material-icons">person</i>
                                         Perfil
                                     </a>
                                 </li>
 
                                 <li>
-                                    <a href="#" onclick="logout()">
-                                        <img src="./img/icon-logout.png" alt="" class="logout-perfil" style="border-radius: 0; box-shadow: none; border: none !important;">
-                                        Logout
+                                    <a href="#">
+                                        <i class="material-icons">help_outline</i>
+                                        Ajuda
+                                    </a>
+                                </li>
+
+                                <li class="btn-logout" onclick="logout()" style="position: relative;">
+                                    <a>
+                                        <i class="material-icons">power_settings_new</i>
+                                        Sair da conta
                                     </a>
                                 </li>
                             </ul>
@@ -137,25 +144,32 @@
                         <div class="profile">
                             <img src="./img/perfil (2).png" alt="" class="img-profile">
 
-                            <h3 class="muda" id="user" style="color: #3d3d3d;"></h3>
+                            <h3 class="muda" id="user" style="color: #222222;"></h3>
 
                             <i class="fas fa-angle-down" id="info-profile" style="color: #3d3d3d;"></i>
 
-                            <i class="fas fa-angle-up" id="up-profile" style="color: #3d3d3dc5; display:none;"></i>
+                            <i class="fas fa-angle-up" id="up-profile" style="color: white !important; display:none;"></i>
                             <div class="profile-active">
 
                                 <ul>
                                     <li>
-                                        <a href="#">
-                                            <img src="./img/perfil (2).png" alt="" class="img-profile logout-perfil">
+                                        <a href="./perfil.html">
+                                            <i class="material-icons">person</i>
                                             Perfil
                                         </a>
                                     </li>
 
                                     <li>
-                                        <a href="#" onclick="logout()">
-                                            <img src="./img/icon-logout.png" alt="" class="logout-perfil" style="border-radius: 0; box-shadow: none; border: none !important;">
-                                            Logout
+                                        <a href="#">
+                                            <i class="material-icons">help_outline</i>
+                                            Ajuda
+                                        </a>
+                                    </li>
+
+                                    <li class="btn-logout" onclick="logout()" style="position: relative;">
+                                        <a>
+                                            <i class="material-icons">power_settings_new</i>
+                                            Sair da conta
                                         </a>
                                     </li>
                                 </ul>
