--- a/projeto/site-institucional/index.html
+++ b/projeto/site-institucional/index.html
@@ -60,7 +60,7 @@
           <li><a href="#pricing">Planos</a></li>
           <li><a href="#footer">Contato</a></li>
           <li>
-            <a href="../Dashboard/Login/index.html" class="btn-login">Login</a>
+            <a href="/moveplus/Login" class="btn-login">Login</a>
           </li>
         </ul>
       </nav>
@@ -85,7 +85,7 @@
           </p>
           <div>
             <a href="#about" class="btn-get-started scrollto">Sobre nós</a>
-            <a href="moveplus/Login" class="btn-get-started scrollto">Ver estações disponiveis</a>
+            <a href="/moveplus/Login/viewEstation.html" class="btn-get-started scrollto">Ver estações disponiveis</a>
           </div>
         </div>
 
