Tela de maquinas + metricas

--- a/projeto/Dashboard/dashboard/dash.html
+++ b/projeto/Dashboard/dashboard/dash.html
@@ -184,6 +184,7 @@
                     <h3>Dashboard</h3>
                     <p>Olá, bem vindo de volta !</p>
                 </div>
+
                 <div class="cards-dash">
                     <div class="card">
                         <div>
@@ -280,6 +281,7 @@
 <script src="./js/graphDisco.js"></script>
 <script src="./js/graphRam.js"></script>
 <script src="./js/exibir.js"></script>
+<script src="./js/metrica.js"></script>
 <script>
 
     const user = JSON.parse(sessionStorage.user);
